--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
           <label for="service">Tipo de Serviço:</label>
           <select id="service" name="service" required>
             <option value="">Selecione um serviço</option>
+            <option value="desmontagem">Desmontagem de Móveis</option>
             <option value="montagem">Montagem de Móveis</option>
             <option value="frete">Pequenos Fretes</option>
-            <option value="combinado">Montagem + Frete</option>
+            <option value="combinado">Montagem e Frete</option>
+            <option value="combinado">Desmontagem e Frete</option>
+            <option value="combinado">Montagem, Desmontagem e Frete</option>
           </select>
         </div>
         <div class="form-group">
@@ -76,7 +79,7 @@
           <i class="fab fa-whatsapp"></i>
           <span>WhatsApp</span>
         </a>
-        <a href="tel:+5582998092831" class="contact-card phone">
+        <a href="tel:82998092831" class="contact-card phone">
           <i class="fas fa-phone"></i>
           <span>Telefone</span>
         </a>
